<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/background">

    <Button
        android:id="@+id/login_button"
        style="@style/button_style"
        android:text="@string/login_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88" />

    <Button
        android:id="@+id/return_button"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <TextView
        android:id="@+id/textView"
        style="@style/text_auth_page_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="221dp"
        android:layout_height="251dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo_mama_shawarma"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.060000002" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        style="@style/text_main_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/email_text"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:minWidth="300dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.26999998"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextTextPassword"
        style="@style/text_main_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/password_text"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:minWidth="300dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.77"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/email_text"
        style="@style/text_main_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_text_label"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress" />

    <TextView
        android:id="@+id/password_text"
        style="@style/text_main_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_text_label"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>